# rag-demo

./: .env.example  .gitignore  README.md  README_NEW.md  README_OLD.md  STRUCTURE_PROPOSAL.md  TUTORIAL_RAG.md  evaluation_results.json  pyproject.toml  requirements.txt
.specstory/history/: 2025-08-23_11-10Z-creating-a-readme-for-the-rag-project.md
data/: guia.txt  sistema_completo.txt
docs/: README.md
docs/guides/: EXEMPLOS_USO_SCRIPTS.md  GUIA_NAVEGACAO.md  TUTORIAL_RAG.md  USO_GUARDRAILS.md
docs/learning/llm-to-rag/: 00-introducao.md  01-llms-basico.md  02-embeddings-similaridade.md  03-bases-vetoriais.md  04-nlp-preprocessamento.md  05-rag-basico.md  06-rag-avancado.md  07-guardrails.md  08-deploy.md  09-prompt-context-engineering.md  10-estudo-de-caso.md  11-avaliacao-rag.md  12-troubleshooting.md  prompt_cheatsheet.md
docs/organization/: CLASSIFICACAO_SCRIPTS.md  INDICE_DOCUMENTACAO.md  MAPA_VISUAL.md  RELATORIO_ORGANIZACAO.md  RESUMO_SISTEMA_EDUCACIONAL.md
docs/reference/: DOCUMENTACAO_SCRIPTS_AVANCADOS.md  GLOSSARIO_CONCEITOS.md  GUARDRAILS_GUIDE.md  RELATORIO_TESTES_GUARDRAILS.md  THRESHOLD_OPTIMIZER_GUIDE.md
rag_demo/: __init__.py  config.py  ingest.py  rag.py  utils.py
scripts/: advanced_metrics.py  analyze_chunks.py  analyze_retrieval.py  analyze_similarity.py  evaluate_rag.py  experiment.py  list_docs.py  list_raw.py  rag_with_guardrails.py  run_ingest.py  run_query.py  search_docs.py  show_vectors.py  threshold_optimizer.py
