[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-demo"
version = "0.1.0"
description = "Sistema RAG com Ollama e ChromaDB"
authors = [{name = "Will Lobato", email = "will@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain>=0.2.11",
    "langchain-core>=0.2.35",
    "langchain-community>=0.2.10",
    "langchain-ollama>=0.1.0",
    "langchain-chroma>=0.1.2",
    "chromadb>=0.5.3",
    "tiktoken>=0.7.0",
    "pypdf>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
rag-ingest = "rag_demo.scripts.ingest:main"
rag-query = "rag_demo.scripts.query:main"
rag-list = "rag_demo.scripts.list_docs:main"
rag-search = "rag_demo.scripts.search:main"

[project.urls]
Homepage = "https://github.com/willlobato/rag-demo"
Repository = "https://github.com/willlobato/rag-demo"
Issues = "https://github.com/willlobato/rag-demo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_demo*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
